header file path changed

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -22,3 +22,7 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
   }
+  .contactus-button{
+    background-color: var(--title-color);
+    color: var(--body-color);
+  }
