--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -4,7 +4,7 @@
     color: var(--title-color);
     text-transform: uppercase;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
@@ -18,15 +18,33 @@
 }
 .main-box-content-right{
     position: absolute;
-    top: 50%;
+    /* top: 40%; */
     right: 0;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     width: 50%;
     height: 100%;
     background-color: var(--title-color);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 0 5rem;
+}
+.profile-picture{
+    height: 240px;
+    width: 240px;
+}
+.main-box-content-left{
+    position: absolute;
+    /* top: 40%; */
+    right: 10;
+    /* transform: translateY(50%); */
+    width: 50%;
+    height: 100%;
+    background-color: var(--title-color);
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
     flex-direction: column;
     padding: 0 5rem;
 }
