--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,16 +1,11 @@
 .container-fluid{
-    background-color: white;
-    /* padding: 10px; */
+  background-image: linear-gradient(90deg, rgba(7,3,88,1) 50%, rgba(0,117,255,1) 100%);
+    padding: 10px;
     font-size: 20px;
-    font-weight: bold;
     text-align: center;
+
 }
 
-.navbar-toggle{
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    
-}
 .toggle-button{
     background-color: var(--title-color);
     color: var(--body-color);
@@ -22,7 +17,11 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
   }
-  .contactus-button{
+  /* .contactus-button{
     background-color: var(--title-color);
     color: var(--body-color);
+  } */
+
+  .navbar{
+    padding: 0%;
   }
