--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -1,11 +1,22 @@
-.user-id{
+.first-name{
     font-size: 120px;
     font-weight: 700;
-    color: var(--title-color);
+    color: black;
     text-transform: uppercase;
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 62%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+}
+.last-name{
+    font-size: 100px;
+    font-weight: 600;
+    color:black;
+    text-transform: uppercase;
+    position: absolute;
+    top: 44%;
+    left: 47%;
     transform: translate(-50%, -50%);
     pointer-events: none;
 }
@@ -36,19 +47,28 @@
     position: relative;
     top: -10%;
     border-radius: 50%;
-    right: 10px;
+    right: 60px;
 }
 .main-box-content-left{
     position: absolute;
-    /* top: 40%; */
-    right: 10;
-    /* transform: translateY(50%); */
+    left: 60px;
     width: 50%;
     height: 100%;
     background-color: var(--title-color);
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
     flex-direction: column;
     padding: 0 5rem;
+}
+
+.about-user{
+    position: absolute;
+    width: 75%;
+    height: 100%;
+    color: black;
+    left: 27%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 26px;
+    top: 50%;
 }
