--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -3,7 +3,9 @@
     padding: 10px;
     font-size: 20px;
     text-align: center;
-
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-right: 3%;
 }
 
 .toggle-button{
