vertical line added

--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -72,3 +72,96 @@
     font-size: 26px;
     top: 50%;
 }
+
+
+
+/* Applying the vertical lines */
+.dgrnDt{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+}
+.gXnnBS {
+    width: 40px;
+    position: fixed;
+    bottom: 0px;
+    left: 40px;
+    right: auto;
+    z-index: 10;
+    color: rgb(100, 255, 218);
+}
+*, ::before, ::after {
+    box-sizing: inherit;
+}
+.li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+.a {
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+    cursor: pointer;
+}
+.esuDqr {
+    padding: 10px;
+}
+.esuDqr ,.svg {
+    width: 25px;
+    height: 25px;
+}
+
+.svg {
+    width: 100%;
+    height: 100%;
+    fill: black;
+    vertical-align: middle;
+}
+
+
+svg:not(:root) {
+    overflow-clip-margin: content-box;
+    overflow: hidden;
+}
+.lbtSgG {
+    width: 40px;
+    position: fixed;
+    bottom: 0px;
+    left: auto;
+    right: 40px;
+    z-index: 10;
+    color: rgb(4, 4, 4);
+}
+div {
+    display: block;
+}
+.dvseSq {
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+}
+.gduzAh {
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    letter-spacing: 0.1em;
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-rl;
+    margin: 20px auto;
+    padding: 10px;
+}
+.dvseSq::after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 90px;
+    margin: 0px auto;
+    background-color: rgb(10, 11, 12);
+}
