--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -118,6 +118,7 @@
     width: 25px;
     height: 25px;
 } */
+
 a {
     display: inline-block;
     text-decoration: none;
@@ -164,7 +165,7 @@ div {
     -webkit-writing-mode: vertical-rl;
     writing-mode: vertical-rl;
     margin: 20px auto;
-    padding: 10px;
+    padding: 0px;
     color: black;
 }
 .dvseSq::after {
@@ -184,4 +185,24 @@ div {
     z-index: 10;
     color: rgb(4, 4, 4);
     
+}
+
+
+/* logo styles */
+/* 
+.Image-logo{
+    height: 50px;
+    width: 50px;
+    margin:15px auto;
+} */
+/* .imagelogo{
+    padding: 5px;
+} */
+.Image-logo{
+    height: 47px;
+    margin: 5px auto;
+}
+.facebook-logo{
+    margin:5px auto;
+    height: 47px;
 }
