--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,12 +1,10 @@
 .main-box-area{
-    padding-left: 10%;
-    padding-right: 10%;
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    padding-top: 10%;
 }
 .main-box-area-left{
     height: 100%;
@@ -26,15 +24,34 @@
     font-size: 20px;
 
 }
-
+/* 
 .main-box-area-right{
     height: 100%;
     width: 50%;
-    /* float: right; */
-    /* background-color: var(--title-color); */
-    /* padding: 0 5rem; */
+    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+} */
+/* .profile-picture{
+    height: 320px;
+    width: 320px;
+    position: relative;
+    top: -10%;
+    right: 60px;
+} */
+.main-box-content-right{
+    position: absolute;
+    /* top: 40%; */
+    right: 0;
+    
+    width: 50%;
+    height: 100%;
+    background-color: var(--title-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 5rem;
 }
