--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -1,23 +1,13 @@
 .first-name{
-    font-size: 120px;
-    font-weight: 700;
-    color: black;
-    text-transform: uppercase;
-    position: absolute;
-    top: 30%;
-    left: 62%;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-}
-.last-name{
     font-size: 100px;
     font-weight: 600;
-    color:black;
-    text-transform: uppercase;
+    color: black;
+    padding-left: 25%;
+    /* text-transform: uppercase; */
     position: absolute;
-    top: 44%;
-    left: 47%;
-    transform: translate(-50%, -50%);
+    top: 30%;
+    /* left: 62%; */
+    /* transform: translate(-50%, -50%); */
     pointer-events: none;
 }
 .main-box{
@@ -27,20 +17,7 @@
     background-color: var(--body-color);
     overflow: hidden;
 }
-.main-box-content-right{
-    position: absolute;
-    /* top: 40%; */
-    right: 0;
-    /* transform: translateY(-50%); */
-    width: 50%;
-    height: 100%;
-    background-color: var(--title-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 5rem;
-}
+
 .profile-picture{
     height: 320px;
     width: 320px;
@@ -51,8 +28,8 @@
 }
 .main-box-content-left{
     position: absolute;
-    left: 60px;
-    width: 50%;
+    /* left: 60px; */
+    width: 100%;
     height: 100%;
     background-color: var(--title-color);
     display: flex;
@@ -61,10 +38,10 @@
 }
 .about-user{
     position: absolute;
-    width: 75%;
+    width: 50%;
     height: 100%;
     color: black;
-    left: 27%;
+    left: 34%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
