--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 10%;
+    padding-bottom: 10%;
 }
 .main-box-area-left{
     height: 100%;
