--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -17,8 +17,9 @@
 .main-box-area-left-content{
     width: 75%;
     height: 100%;
-    color: black;
+    color: rgb(0, 0, 0);
     font-size: 20px;
+    font-weight: 600;
 
 }
 .main-box-content-right{
@@ -28,10 +29,16 @@
     
     width: 50%;
     height: 100%;
-    background-color: var(--title-color);
+    /* background-color: var(--title-color); */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 0 5rem;
+}
+.main-box-area-left-content-heading{
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: white;
 }
