--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -25,6 +25,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 0% 5%;
+    padding-top: 10%;
 }
 .project-box{
     width: 100%;
@@ -44,20 +45,6 @@
     font-weight: 400;
     color: #000;
     margin-bottom: 2%;
-}
-.project-button{
-    display: flex;
-    justify-content: flex-end;
-}
-.project-button a{
-    text-decoration: none;
-    color: #000;
-    font-size: 1.5rem;
-    font-weight: 400;
-    padding: 1% 2%;
-    border: 1px solid #000;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out;
 }
 .project-button a:hover{
     background-color: #000;
@@ -80,4 +67,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.project-button{
+    width: 20%;
+    height: 10%;
 }
