--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -1,11 +1,10 @@
-.main-content-area-box{
-    height: 100%;
+.main-content-area-box {
     width: 100%;
     padding-left: 10%;
-    display: flex;
+    padding-bottom: 10%;
 }
 
-.project{
+.project {
     width: 100%;
     height: 100%;
     display: flex;
@@ -14,43 +13,61 @@
     padding: 0% 5%;
     padding-top: 10%;
 }
-.project-box{
+
+.project-box {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: 10%;
 }
-.project-title{
+
+.project-title {
     font-size: 2.5rem;
     font-weight: 600;
     color: #000;
     margin-bottom: 2%;
 }
-.project-description{
+
+.project-description {
     font-size: 1.5rem;
     font-weight: 400;
     color: #000;
     margin-bottom: 2%;
 }
-.project-button a:hover{
+
+.project-button a:hover {
     background-color: #000;
     color: #fff;
 }
-.project-image{
+
+.project-image {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.project-image img{
+
+.project-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.project-button{
+.project-button {
     width: 20%;
     height: 10%;
+}
+
+.kaam-dhaam {
+    width: 200px;
+}
+
+.verticle-line {
+    border-Top: 2px solid #fff;
+    margin-Left: 20;
+    margin-Right: 20;
+    display: block;
 }
