--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -59,7 +59,7 @@
     width: 200px;
 }
 
-.verticle-line {
+.verticle {
     border-Top: 2px solid #fff;
     margin-Left: 20;
     margin-Right: 20;
