--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -42,26 +42,15 @@
     color: #fff;
 }
 
-.project-image {
-    width: 100%;
-    height: 100%;
+.project1 {
+    height: 50%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+ } 
 
 .project-button {
     width: 20%;
     height: 10%;
-}
-
-.kaam-dhaam {
-    width: 200px;
-}
-
-.verticle {
-    border-Top: 2px solid #fff;
-    margin-Left: 20;
-    margin-Right: 20;
-    display: block;
 }
