about us color updated

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -17,7 +17,7 @@
 .main-box-area-left-content{
     width: 75%;
     height: 100%;
-    color: rgb(0, 0, 0);
+    color: rgb(154 154 154);
     font-size: 20px;
     font-weight: 600;
 
