--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -2,10 +2,6 @@
     background-image: linear-gradient(90deg, rgba(7,3,88,1) 50%, rgba(0,117,255,1) 100%);
     padding: 10px;
 }
-footer{
-    background-image: linear-gradient(90deg, rgba(7,3,88,1) 50%, rgba(0,117,255,1) 100%);
-    padding: 10px;
-}
 .text-center{
-    color: black;
+    color: rgb(154 154 154);
 }
