--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -1,7 +1,7 @@
 .first-name{
     font-size: 100px;
     font-weight: 600;
-    color: black;
+    color: aliceblue;
     padding-left: 25%;
     position: absolute;
     top: 30%;
@@ -30,14 +30,12 @@
     height: 100%;
     background-color: var(--title-color);
     display: flex;
-    flex-direction: column;
-    padding: 0 5rem;
 }
 .about-user{
     position: absolute;
     width: 37%;
     height: 100%;
-    color: black;
+    color:rgb(100, 255, 218);
     left: 29%;
     font-size: 26px;
     top: 50%;
@@ -118,3 +116,34 @@ div {
     margin:5px auto;
     height: 35px;
 }
+
+/* For screen size more than 400px */
+@media screen and (max-width: 400px) {
+    .first-name{
+        font-size:60px;
+        padding-left: 0%;
+        text-align: center;
+        /* color: aliceblue; */
+        font-family: 'Hanalei Fill', cursive;
+        font-weight: 100;
+    }
+    .about-user{
+        padding-left: 0%;
+        left: 11%;
+        top: 42%;
+        display: flex;
+        width: 62%;
+    }
+    .main-box-content-left{
+        left: 0%;
+        /* align-items: center; */
+        padding-left: 7%;
+        text-align: center;
+    }
+    .lbtSgG{
+        display: none;
+    }
+    .gXnnBS{
+        display: none;
+    }
+  }
