--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -134,7 +134,7 @@ div {
     .about-user{
         padding-left: 0%;
         left: 0%;
-        top: 40%;
+        top: 42%;
         width: 100%;
         font-size: 20px;
     }
@@ -156,7 +156,7 @@ div {
         position: relative;
         left: 0%;
         top:0px;
-        filter: opacity(0.5) drop-shadow(0 0 0 rgb(24, 206, 163));
+        filter: opacity(0.5) drop-shadow(0 0 0 rgb(4, 255, 196));
         width: auto;
         padding: 5px;
     }
@@ -167,7 +167,7 @@ div {
         height: 45px;
         position: relative;
         top:14px;
-        filter: opacity(0.5) drop-shadow(0 0 0 rgb(100, 255, 218));
+        /* filter: opacity(0.5) drop-shadow(0 0 0 rgb(100, 255, 218)); */
         width: auto; 
     }
     
