--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -31,3 +31,18 @@
     padding-right: 1rem!important;
     z-index: 1030;
   }
+  .image-logo-header{
+    height: 45px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 15px lightblue;
+  }
+
+
+  /* For screen size more than 400px */
+@media screen and (max-width: 48em) {
+  .image-logo-header{
+    height: 45px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 15px lightblue;
+  }
+}
