--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,11 +1,16 @@
 .bg-light{
-    background-image: linear-gradient(90deg, rgba(7,3,88,1) 50%, rgba(0,117,255,1) 100%);
-    padding: 10px;
+    background-color: transparent;
+       padding: 10px;
 }
 .text-center{
     color: rgb(154 154 154);
 }
-
+footer{
+    color: black;
+}
+.footer-class{
+    background-color: rgb(16, 16, 16);
+}
 
 
 @media screen and (max-width: 48em) {
