--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -10,8 +10,6 @@
 }
 
 .toggle-button{
-    background-color: var(--title-color);
-    color: var(--body-color);
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
@@ -35,6 +33,13 @@
     height: 45px;
     border-radius: 30px;
     box-shadow: 0px 0px 15px lightblue;
+  }
+  .nav-link{
+    color: aliceblue;
+  }
+  
+  .nav-link:hover{
+    color: rgb(55, 130, 197);
   }
 
 
