--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -42,5 +42,30 @@
 
 
 @media screen and (max-width: 48em) {
+    .main-box-area-left{
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+        width: 100%;
+    }
+    .main-box-area-left-content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        font-size: 17px;
+        width: 100%;
+        height: 10%;
     
+    }
+    .main-box-area-left-content-heading{
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+    }
+    .profile-picture{
+        height: 50px;
+        width: 50px;
+        
+    }
 }
