light and dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,13 @@
   border: 1px solid var(--orange);
   color: var(--orange);
 }
+
+
+.dark-theme{
+  background-color: black;
+}
+
+.light-theme{
+  background-color: #61dafb;
+
+}
