--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -9,18 +9,23 @@
 .njaJNje{
     font-size: 60px;
     font-weight: 600;
+    color: var(--adrakcolor);
 }
+.cont-head{
+    color: var(--adrakcolor);
+}
+
 .gUsVuV {
     text-align: center;
     max-width: 600px;
     margin: 0px auto 20px;
-    color: rgb(154 154 154);
+    color: var(--allsubhed);
     font-size: 20px;
 }
 .dXyrwW {
-    color: rgb(100, 255, 218);
+    color: var(--aboutcolor);
     background-color: transparent;
-    border: 1px solid rgb(100, 255, 218);
+    border: 1px solid var(--aboutcolor);
     border-radius: 3px;
     padding: 1.25rem 1.75rem;
     font-size: 14px;
@@ -39,7 +44,7 @@
     position: relative;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     cursor: pointer;
-    color: rgb(100, 255, 218);
+    color: var(--adrakcolor);
 }
 
 
