--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -34,7 +34,7 @@
     box-shadow: 0px 0px 15px lightblue;
   }
   .nav-link{
-    color: aliceblue;
+    color: var(--adrakcolor);
   }
   
   .nav-link:hover{
