--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -48,7 +48,7 @@
 }
 
 
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 780px) {
     .gUsVuV{
         font-size: 19px;
     }
