--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -167,7 +167,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 780px) {
     .gRQVKa{
         font-size: 30px;
         left: -6%;
