Add social media icons to footer

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -5,6 +5,11 @@
 .text-center{
     color: var(--adrakcolor);
 }
+.image-foot{
+    height: 30px;
+    filter: opacity(0.5) drop-shadow(0 0 0 rgb(4, 255, 196));
+
+}
 
 
 
