--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -8,6 +8,11 @@
     padding-right: 3%;
 }
 
+nav{
+  background:rgba(0,0,0,.7);
+  backdrop-filter: blur(15px);
+}
+
 .toggle-button{
     border: none;
     padding: 0.5rem 1rem;
@@ -20,8 +25,9 @@
 
   .navbar{
     padding: 0%;
+    top: 0px;
     transition: background-color .2s;
-    position: relative;
+    position: fixed;
     left: 0;
     right: 0;
     padding-left: 1rem!important;
