--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -33,7 +33,7 @@
     height: 20rem;
     width: 20rem;
     border-radius:  18% ;
-    position: relative;
+    /* position: relative; */
     left: 6rem;
     top: 3rem;
 
@@ -86,24 +86,3 @@
         padding-left: 0.5rem;
     }
 }
-
-
-
-/* 
-
-<section class="py-4 py-xl-5">
-    <div class="container">
-        <div class="bg-dark border rounded border-0 border-dark overflow-hidden">
-            <div class="row g-0">
-                <div class="col-md-6">
-                    <div class="text-white p-4 p-md-5">
-                        <h2 class="fw-bold text-white mb-3">Biben dum fringi dictum, augue purus</h2>
-                        <p class="mb-4">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p>
-                        <div class="my-3"><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-light btn-lg" role="button" href="#">Button</a></div>
-                    </div>
-                </div>
-                <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" /></div>
-            </div>
-        </div>
-    </div>
-</section> */
