Fix positioning and update about me text

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -33,7 +33,7 @@
     height: 20rem;
     width: 20rem;
     border-radius:  18% ;
-    /* position: relative; */
+    position: relative;
     left: 6rem;
     top: 3rem;
 
