--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -3,6 +3,10 @@
     padding-bottom: 10%;
 }
 
+img{
+    border-radius: 20;
+}
+
 .project {
     width: 100%;
     height: 100%;
@@ -69,6 +73,7 @@ element.style {
 
 
 .gWlhZI {
+    position: relative;
     grid-area: 1 / 5 / -2 / 11;
 }
 .VhaEB:nth-of-type(2n+1) .featured__StyledContent-sc-19vdtah-1 {
