Update Lang.css and Lang.js

--- a/src/Components/Languages/Lang.css
+++ b/src/Components/Languages/Lang.css
@@ -1,3 +1,10 @@
-.tech-non{
-    background-color: --var(--adrakcolor);
+.row{
+    padding-left: 10%;
+    padding-right: 10%;
+    color: var(--allsubhed);
+    font-size: 20px;
 }
+.border-solid{
+    border: 1px solid var(--allsubhed);
+}
+
