fix the buttons

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,3 +1,20 @@
+:root {
+	--d: 2500ms;
+	--angle: 90deg;
+	--gradX: 100%;
+	--gradY: 50%;
+	--c1: rgba(168, 239, 255, 1);
+	--c2: rgba(168, 239, 255, 0.1);
+}
+
+
+@keyframes borderRotate {
+	100% {
+		--angle: 420deg;
+	}
+}
+
+
 .container-fluid{
   background-color: transparent;
     padding: 10px;
@@ -6,6 +23,12 @@
     padding-left: 3%;
     padding-right: 3%;
     padding-right: 3%;
+}
+
+
+.contactus-button{
+  position: relative;
+  left: 0px;
 }
 
 /* nav{
@@ -41,7 +64,7 @@
     border-radius: 30px;
     box-shadow: 0px 0px 15px lightblue;
   }
-  .nav-a{
+  /* .nav-a{
     color: var(--adrakcolor);
   }
   .nav-item{
@@ -49,9 +72,37 @@
     margin-right: 1rem;
   }
   .nav-a:hover{
-    color: rgb(55, 130, 197);
+    color: rgb(5, 8, 10);
+  } */
+
+  @property --angle {
+    syntax: '<angle>';
+    initial-value: 90deg;
+    inherits: true;
+  }
+  
+  @property --gradX {
+    syntax: '<percentage>';
+    initial-value: 50%;
+    inherits: true;
+  }
+  
+  @property --gradY {
+    syntax: '<percentage>';
+    initial-value: 0%;
+    inherits: true;
   }
 
+.button{
+	/* border: 0.35rem solid; */
+  position: relative;
+  left: 95%;
+  background: none;
+  color: var(--allsubhed);
+  /* border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
+  animation: borderRotate var(--d) linear infinite forwards; */
+
+}
   
 .dark_mode {
   margin-top: -30px;
