--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@
   }
 }
 
-.button {
+/* .button {
   background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
   box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
   border-radius: 34px;
@@ -99,7 +99,7 @@
   cursor: pointer;
   border: 1px solid var(--orange);
   color: var(--orange);
-}
+} */
 
 /*  Dark theme and light theme */
 
