--- a/src/Components/Intro/intro.css
+++ b/src/Components/Intro/intro.css
@@ -107,9 +107,9 @@ div {
     position: fixed;
     bottom: 0px;
     left: 40px;
-    right: 0px;
+    /* right: 0px; */
     z-index: 10;
-    filter: opacity(0.5) drop-shadow(0 0 0 var(--aboutcolor));
+    filter: opacity(0.8) drop-shadow(0 0 0 rgb(100,255,218));
     /* color: var(--aboutcolor); */
 }
 
