--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -77,7 +77,7 @@ element.style {
     position: relative;
     grid-area: 1 / 5 / -2 / 11;
 }
-.VhaEB:nth-of-type(2n+1) .featured__StyledContent-sc-19vdtah-1 {
+.VhaEB:nth-of-type(n) .featured__StyledContent-sc-19vdtah-1 {
     text-align: right;
 }
 .dZTpBf {
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: -10px;
 }
 
-.project1 {
+.project1, .project2, .project3, .project4 {
     height: 100%;
     padding-top: 27px;
     width: 493%;
@@ -139,13 +139,6 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     grid-area: 1 / 5 / -2 / 11;
 }
-.project2 {
-    height: 100%;
-    padding-top: 27px;
-    width: 493%;
-    padding-left: 37px;
-}
-
 
 .gRQVKa {
     position: relative;
@@ -167,7 +160,14 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 20px;
     align-self: center;
 }
+.project-links{
+    padding: 4px;
+    color: var(--allsubhed);
 
+}
+.live-preview{
+    padding-right:1rem ;
+}
 
 @media screen and (max-width: 780px) {
     .gRQVKa{
@@ -186,11 +186,8 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     text-align: center;
     }
-    .project1{
+    .project1 , .project2, .project3, .project4{
         opacity: 0.25s;
-        display: none;
-    }
-    .project2{
         display: none;
     }
     .enJBDof{
